Fixed responsive layout bugs

--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@ section {
 #main-nav {
 	position: sticky;
 	top: 0;
+	width: 100%;
 	height: 50px;
 	padding: 0 20px;
 	background-color: whitesmoke;
@@ -121,6 +122,7 @@ section {
 #articles-montage {
 	min-height: 700px;
 	display: grid;
+	width: 100%;
 	grid-template-columns: repeat(8, 1fr);
 	grid-template-rows: repeat(5, 1fr);
 	gap: 10px;
@@ -302,6 +304,15 @@ section {
 	font-size: 14px;
 }
 
+@media (max-width: 800px) {
+	#latest-stories-list {
+		flex-direction: column;
+		align-items: center;
+	}
+	#latest-stories h2 {
+		text-align: center;
+	}
+}
 /*--------- channels---------*/
 
 #channels-list li {
@@ -355,6 +366,18 @@ section {
 		flex-wrap: wrap;
 		justify-content: space-around;
 		row-gap: 20px;
+	}
+}
+
+@media (max-width: 800px) {
+	#explore-channels h2 {
+		text-align: center;
+	}
+	#channels-list {
+		justify-content: unset;
+		flex-wrap: nowrap;
+		overflow-x: scroll;
+		gap: 0 10px;
 	}
 }
 
@@ -570,6 +593,7 @@ p {
 
 /*-----foooter------*/
 footer {
+	width: 100%;
 	padding: 50px 30px;
 	background: black;
 }
@@ -627,4 +651,12 @@ hr {
 #copyright p {
 	width: 100%;
 	text-align: center;
+}
+
+@media (max-width: 800px) {
+	#footer-flex-container {
+		flex-direction: column;
+		align-items: center;
+		gap: 20px 0;
+	}
 }
